--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <h2 class="h2">The only courses <span class="bleu-light">specially designed</span> for <br/>your needs</h2>
                     <div class="pack-mindeo-formation-wrapper"><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f37" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/pexels-jonathan-borba-14354109_800x1350.jpg" loading="lazy" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container"><div class="badge badge-small-white">Crypto Investment</div><h3 class="h3 smaller _8f8fab">CryptoProfit Pro</h3><div class="grey margin-bottom-mobile">Harness the Power of Crypto: Supercharge Your Portfolio with Advanced Investment Tactics!</div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="media/original_imageshttpsg.foolcdn.comeditorialimag.width-880_1RsBqNB-modified.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/original_imageshttpsg.foolcdn.comeditorialimag.width-880_1RsBqNB-modified.png 500w, media/original_imageshttpsg.foolcdn.comeditorialimag.width-880_1RsBqNB-modified.png 575w" alt="" class="pack-formation-book"/></a>
                         <a
-                            data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f45" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/652789da210b6feae50260ab_Timothe%CC%81e.png" loading="lazy" sizes="(max-width: 479px) 100vw, 260px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/652789da210b6feae50260ab_Timothe%CC%81e-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/652789da210b6feae50260ab_Timothe%CC%81e-p-800.png 800w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/652789da210b6feae50260ab_Timothe%CC%81e.png 928w"
+                            data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f45" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/pexels-jonathan-borba-14354114_800x1350.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, 260px" srcset="media/pexels-jonathan-borba-14354114_800x1350.jpg 500w, media/pexels-jonathan-borba-14354114_800x1350.jpg 800w, media/pexels-jonathan-borba-14354114_800x1350.jpg 928w"
                                 alt="" class="forma-card" />
                             <div class="pack-formation-info">
                                 <div class="stroke-container">
@@ -945,7 +945,7 @@
             </div>
             <div class="container zindex2 margin-top zindex1">
                 <div class="fromation-new-box">
-                    <div data-w-id="cd30ab72-fa71-9bd7-1bdf-054b602a6146" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c517287d80579992f24_EcomPro.jpg" loading="lazy" alt="" class="img-formation-new" />
+                    <div data-w-id="cd30ab72-fa71-9bd7-1bdf-054b602a6146" style="opacity:0" class="fromation-new"><img src="media/pexels-jonathan-borba-14354114_800x1350.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Lucas Paciorek</p>
                             <div class="small-text _13px white">Basics of crypto</div>
