--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Suraj Chada</p>
                             <div class="small-text _13px white">Mastering investment</div>
-                        </div><img src="media/original_imageshttpsg.foolcdn.comeditorialimag.width-880_1RsBqNB-modified.png" loading="lazy" alt=""
+                        </div><img src="media/png-transparent-crypto-credit-card-bitcoin-thumbnail (1).png" loading="lazy" alt=""
                             class="formation-book" />
                         <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee29d" class="formation-new-hover">
                             <div class="badge populaire">Investment</div>
