--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                         <div class="btn-1 smaller white">Find out more</div>
                                     </div>
                                 </div>
-                            </div><img src="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 500w, media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 514w"
+                            </div><img src="media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png 500w, media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png 514w"
                                 alt="" class="pack-formation-book"/></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f53"
                                 href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/0x0_1_800x1350.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, 260px" srcset="media/0x0_1_800x1350.jpg 500w, media/0x0_1_800x1350.jpg 503w" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container opaque"><div class="badge badge-small-white">Decentralized Finance (DeFi) Fundamentals</div><h3 class="h3 smaller _8f8fab">DeFi Dive</h3><div class="grey margin-bottom-mobile">Dive Into DeFi: Explore New Frontiers in Finance and Revolutionize Your Financial Future! </div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="media/40_211_22329e16b0.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/40_211_22329e16b0.png 500w, media/40_211_22329e16b0.png 505w" alt="" class="pack-formation-book"/></a>
                             <a
@@ -949,7 +949,7 @@
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Lucas Paciorek</p>
                             <div class="small-text _13px white">Basics of crypto</div>
-                        </div><img src="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 500w, media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 575w"
+                        </div><img src="media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png 500w, media/png-clipart-crypto-coins-chart-graph-trend-trading-business-investing-finance-traditional (1).png 575w"
                             alt="" class="formation-book" />
                         <div data-w-id="35777baf-c9d5-e2a8-9c7a-a6fa7c61a339" class="formation-new-hover">
                             <div class="badge populaire">Introduction</div>
