--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             </div>
                             <div class="subtitle set-width mobile-centered">Digital Wealth is a leading online education platform dedicated to empowering individuals with the knowledge and skills to thrive in the rapidly evolving world of cryptocurrency and blockchain technology. </div>
                             <div class="banner-btn-container mobile-centered"><a href="#Formations" class="btn-1 w-button">Explore courses</a>
-                                <a id="playVideo" href="#videoPlayer" class="link-video w-inline-block">
+                                <a id="playVideo" href="#my-video" class="link-video w-inline-block">
                                     <div>View video</div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/640eec01ec613945d7331a9c_Arrow.svg" loading="lazy" alt="" class="link-video-svg" /></a>
                             </div>
                         </div>
@@ -137,7 +137,12 @@
                                 
                                 <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
                                     <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                           <iframe id="" controls style="width:100%; height:100%;"src="media/lv_0_20240306185507.mp4" title=" video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                           <iframe id="my-video"
+    class="video-js"
+    controls
+    preload="auto"
+    poster="MY_VIDEO_POSTER.jpg"
+    data-setup="{}" controls style="width:100%; height:100%;"src="media/lv_0_20240306185507.mp4" title=" video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                      </div>
                               
