--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     controls
     preload="auto"
     poster="MY_VIDEO_POSTER.jpg"
-    data-setup="{}" controls style="width:100%; height:100%;"src="media/lv_0_20240306185507.mp4" title=" video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    data-setup="{}" controls style="width:100%; height:100%;" src="media/lv_0_20240306185507.mp4" title=" video player" type="video/mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                      </div>
                               
