--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« From broke student to entrepreneur generating over $4,000 a day in profits »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Steward and Ed, who met during training, decided to spend their couple's vacation together on a yacht and sent us this video to thank us.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="3fcb0975-cd77-2329-a775-61b68a1e9b08" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb5b4fea7342d73582_Screenshot%202023-04-06%20at%2010.37.36.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -745,7 +745,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« A single server can generate $500,000 with this training »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Emily had always dreamed of setting up her own marketing agency, but thanks to the freedom and money she gained from our courses, she finally took the plunge. </div>
                                         </div>
                                     </div>
                                     <div data-w-id="0e385ebb-90e2-32f6-93a8-6df771fd278f" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb56bfe259d1cb8281_Screenshot%202023-04-06%20at%2010.40.08.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -768,7 +768,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« More than $1,200,000 in profits at the age of 21 »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Clara has become a brilliant businesswoman, after generating millions with us, she now does business all over the world.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="b255d799-f04c-5baf-eed8-4710ed8d85b8" style="display:block;-webkit-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -790,7 +790,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">«2,000,000$ in profits»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Coming from a modest family, Mike took our training to have the life he always dreamed of. After succeeding thanks to our training, he decided to buy a yacht and took his whole family on a seaside holiday.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="f38109d6-0663-78ad-1ebc-2c7950293ed0" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93ebdaa00cf10d966b3a_Screenshot%202023-04-06%20at%2010.38.19.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -811,7 +811,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">Edward has made over $2,500,000 in profits thanks to training<br/></div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Coming from a tough neighborhood, Taylor has always admired the success of businessmen and their charisma. He sent us this video when he bought his first designer suit. <br/></div>
                                         </div>
                                     </div>
                                     <div data-w-id="3a862c10-aa33-8f31-a1d8-089502a8499f" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93ea7c4eb3839db999cd_Screenshot%202023-04-06%20at%2010.36.56.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -832,7 +832,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« This couple generates €1,500,000 in profits and moves to the city of their dreams »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">after generating over 10 million, Maya decided to buy a seaside villa and move in.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="a78adb64-d971-7a4a-f9ac-3f22ffa0356c" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb204eb8b1a5478c6e_Screenshot%202023-04-06%20at%2010.39.20.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -853,7 +853,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 1,000,000€ in profits at just 19 years of age»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">A luxury car enthusiast, Anthony was keen to send us this video of his first luxury car.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="015ab506-89cc-8207-1309-8982c5044dc6" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb97c1db5be7134891_Screenshot%202023-04-06%20at%2010.38.37.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -874,7 +874,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« They changed their lives thanks to the training and made over €15,000,000 in profits. »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">After going through a difficult period, Ken and Payton embarked on this adventure together. They are now enjoying their life as a couple to the full, and that couldn't make us happier.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="2395379d-310d-30a2-efee-0d5028abc1ff" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb85af6bdd22e44b5e_Screenshot%202023-04-06%20at%2010.39.43.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
