--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">after generating over 10 million, Maya decided to buy a seaside villa and move in.</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">after generating over 20 million, Maya decided to buy a seaside villa and move in.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="a78adb64-d971-7a4a-f9ac-3f22ffa0356c" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb204eb8b1a5478c6e_Screenshot%202023-04-06%20at%2010.39.20.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -895,7 +895,7 @@
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 2,500,000 in profits after just 4 months»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Miguel, aged 19, decided to take the plunge but didn't know where to start. Our experts guided him, and that changed his life.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="bcdf6c1f-c4d1-ab42-2357-0b32c5222fb8" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb30a620edbeeda444_Screenshot%202023-04-06%20at%2010.40.47.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
