--- a/index.html
+++ b/index.html
@@ -135,23 +135,19 @@
                         <div class="column padding-left bigger-flex _65 _50px-left">
                             <div class="video embed-video w-embed w-iframe w-script">
                                 
-                                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-                                    <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                           <iframe id="my-video"
-    class="video-js"
-    controls
-    preload="auto"
-    poster="MY_VIDEO_POSTER.jpg"
-    data-setup="{}" controls style="width:100%; height:100%;" src="media/lv_0_20240306185507.mp4" title=" video player" type="video/mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                </div>
-                                     </div>
-                              
+                              <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+<div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+<div class="wistia_embed wistia_async_w5h4igmhco seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<script>
+document.querySelector('#playVideo').addEventListener("click", (event) => {
+ window._wq = window._wq || [];
+_wq.push({ id: 'w5h4igmhco', onReady: function(video) {
+  console.log("I got a handle to the video!", video);
+    video.play()
+}});
+});
+</script></div></div></div></div></div>
             <div class="section no-padding-bottom">
                 <div class="container">
                     <div class="_2-columns f2wf-columns reverse no-padding">
