--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« From broke student to entrepreneur generating over $4,000 a day in profits »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Two broke waiters went from hoping for the occasional tip from customers to vacationing on a yacht with their girlfriends. Congratulations to Ted and Oliver</div>
                                         </div>
                                     </div>
                                     <div data-w-id="3fcb0975-cd77-2329-a775-61b68a1e9b08" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -741,7 +741,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« A single server can generate $500,000 with this training »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Suffocating from debt, Emily decided to take matters into her own hands and work her way out of the situation, generating more than $2 million in 2023. </div>
                                         </div>
                                     </div>
                                     <div data-w-id="0e385ebb-90e2-32f6-93a8-6df771fd278f" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -764,7 +764,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« More than $1,200,000 in profits at the age of 21 »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Clara has become a brilliant Trader, after generating millions thanks to our help, she is now free to travel whenever and wherever she wants.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="b255d799-f04c-5baf-eed8-4710ed8d85b8" style="display:block;-webkit-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -786,7 +786,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">«2,000,000$ in profits»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Coming from a modest family, Mike took our training to have the life he always dreamed of. Last summer, he decided to buy a yacht and took his whole family on a seaside holiday.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="f38109d6-0663-78ad-1ebc-2c7950293ed0" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -807,7 +807,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">Edward has made over $2,500,000 in profits thanks to training<br/></div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Coming from a tough neighborhood, Tyler has decided to get off the streets to have the life he's always dreamed of. He sent us this video when he bought his first  italian designer suit.<br/></div>
                                         </div>
                                     </div>
                                     <div data-w-id="3a862c10-aa33-8f31-a1d8-089502a8499f" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -828,7 +828,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« This couple generates €1,500,000 in profits and moves to the city of their dreams »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">after generating over 20 million, Maya decided to buy a seaside villa and move in.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="a78adb64-d971-7a4a-f9ac-3f22ffa0356c" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -849,7 +849,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 1,000,000€ in profits at just 19 years of age»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">A luxury car enthusiast, Anthony ,one of our student,was keen to send us this video of his first luxury car.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="015ab506-89cc-8207-1309-8982c5044dc6" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -870,7 +870,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« They changed their lives thanks to the training and made over €15,000,000 in profits. »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">After going through a difficult financial period, Ken and Payton embarked on this adventure together. They are now enjoying their life as a rich couple to the full, and that couldn't make us happier.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="2395379d-310d-30a2-efee-0d5028abc1ff" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -891,7 +891,7 @@ _wq.push({ id: 'w5h4igmhco', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 2,500,000 in profits after just 4 months»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Miguel, aged 19, decided to take the plunge but didn't know where to start. Our experts guided him, and that changed his life.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="bcdf6c1f-c4d1-ab42-2357-0b32c5222fb8" class="slide__image next"><img src="media/Screenshot_20240311-193509_Video Player-modified.png" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
