--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="column padding-left bigger-flex _65 _50px-left">
                             <div class="video embed-video w-embed w-iframe w-script">
-                                
+                                <script src="https://fast.wistia.com/embed/medias/a4cr5gh3l1.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
                               <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
 <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
 <div class="wistia_embed wistia_async_a4cr5gh3l1 seo=true videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/a4cr5gh3l1/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" />&nbsp;</div></div></div></div>
