--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                                 <div class="small-text _13px white left-align">Elevate your crypto investments with CryptoProfit Pro! Learn advanced strategies to maximize returns in the fast-paced crypto market. Unleash your full potential as a crypto investor today!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
-                    <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="media/0x0_1_800x1350.jpg" loading="lazy" alt="" class="img-formation-new" />
+                    <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="media/81voGUikpdL._AC_UF1000,1000_QL80_.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Emilien Lambert</p>
                             <div class="small-text _13px white">Dive into DeFi</div>
