--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">Clara has become a brilliant Trader, after generating millions thanks to our help, she is now free to travel whenever and wherever she wants.</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Clara and Samantha have become a brilliant Trader, after generating millions thanks to our help, they are now free to travel whenever and wherever they want.</div>
                                         </div>
                                     </div>
                                     <div data-w-id="b255d799-f04c-5baf-eed8-4710ed8d85b8" style="display:block;-webkit-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
