--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                                       <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
                                         <div class="f-paragraph-small">Investor</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">Maxwell Wallace built a 300 millions dollar investment portfolio through astute risk management and strategic asset allocation, generating consistent returns for his clients even during periods of market volatility.</div>
+                                            <div class="left-align margin-top">Maxwell Wallace built a 300 million dollar investment portfolio through astute risk management and strategic asset allocation, generating consistent returns for his clients even during periods of market volatility.</div>
                                         </div>
                                     </div>
                                 </div>
