--- a/index.html
+++ b/index.html
@@ -710,13 +710,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                                             alt="" class="img-testiimonial current" /></div>
                                     <div data-w-id="2a46a4f5-5415-3ba2-823a-5b4ee4b2b38f" class="slide__image current">
                                         <div class="img-testiimonial current w-embed w-iframe">
-                                          
-                                            <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-                                                <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                                    <div class="wistia_embed wistia_async_1ilffga9w5 seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                          <script src="https://fast.wistia.com/embed/medias/51gnq5xa52.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_51gnq5xa52 seo=true videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/51gnq5xa52/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
                                         <div class="info-slider-container">
                                             <div class="small-text marrgin-bottom _15px-mobile">Two broke waiters went from hoping for the occasional tip from customers to vacationing on a yacht with their girlfriends. Congratulations to Ted and Oliver</div>
                                         </div>
