--- a/index.html
+++ b/index.html
@@ -710,10 +710,10 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                                             alt="" class="img-testiimonial current" /></div>
                                     <div data-w-id="2a46a4f5-5415-3ba2-823a-5b4ee4b2b38f" class="slide__image current">
                                         <div class="img-testiimonial current w-embed w-iframe">
-                                          
+                                          <script src="https://fast.wistia.com/embed/medias/51gnq5xa52.jsonp" async></script>
                                             <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
                                                 <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                                    <div class="wistia_embed wistia_async_1ilffga9w5 seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+                                                   <div class="wistia_embed wistia_async_51gnq5xa52 seo=true videoFoam=true" style="height:100%;position:relative;width:100%">&nbsp;</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -1115,7 +1115,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
     </div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63dd575601b9b8315968fad5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/js/webflow.d6ed9d359.js" type="text/javascript"></script>
-    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+    
     <style>
         .border-gradient {
             background: linear-gradient(147deg, #5F64E1, #7D62C4, #A061A4, #BD5F88, #DC5E6B);
