--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
     </div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63dd575601b9b8315968fad5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/js/webflow.d6ed9d359.js" type="text/javascript"></script>
-    
+    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
     <style>
         .border-gradient {
             background: linear-gradient(147deg, #5F64E1, #7D62C4, #A061A4, #BD5F88, #DC5E6B);
