--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                         <div class="column _75 left">
                             <div class="badge">Best sale</div>
                             <h2 class="h2 bleu less-margin-top">Digital Wealth pack</h2>
-                            <div class="subtitle dark-grey">The didital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, Trader Mindset and AI Mania) and over 200 hours of content in a single Pack. </div>
+                            <div class="subtitle dark-grey">The digital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, Trader Mindset and AI Mania) and over 200 hours of content in a single Pack. </div>
                             <div class="banner-btn-container mobile-centered"><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 w-button">Find out more</a></div>
                         </div>
                         <div class="column _50">
