--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                             <div class="reseau-sociaux">
                                 <div class="wrap-reseaux"><a href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de217bedbee172_Vector%20(4).svg" loading="lazy" alt="" class="insta-logo"/></a>
                                     <a
-                                        href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de216f71bee171_Vector%20(5).svg" loading="lazy" alt="" class="insta-logo" /></a><a href="https://www.youtube.com/yomidenzel" target="_blank"
+                                        href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de216f71bee171_Vector%20(5).svg" loading="lazy" alt="" class="insta-logo" /></a><a href="" target="_blank"
                                             class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de216e63bee170_Vector%20(6).svg" loading="lazy" alt="" class="insta-logo"/></a>
                                         <a
                                             href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de212efcbee16f_Vector%20(7).svg" loading="lazy" alt="" class="insta-logo" /></a>
